@@ -6,6 +6,7 @@
 - improved routing, actions can use `-->` instead of `* -->`
 - fixed parsing arrays in the `config`
 - fixed FlowStream stats in `instance.newmessage()`
+- updated `REQUEST()` - `timeout` is optional and may be disabled
 
 ========================
 0.0.91
